# leancheck

./: .gitignore  .travis.yml  CREDITS.md  LICENSE  Makefile  README.md  TODO.md  changelog.md  leancheck.cabal  llcheck.cabal  session.hs  stack.yaml
.github/workflows/: build.yml
Test/: Check.hs  Most.hs  Operators.hs  TypeBinding.hs  Types.hs
Test/Check/: Basic.hs  Core.hs  Debug.hs  Derive.hs  Error.hs  Function.hs  FunctionC.hs  FunctionP.hs  FunctionShow.hs  IO.hs  Invariants.hs  ShowFunction.hs  Utils.hs
Test/Check/Function/: CoListable.hs  ListsOfPairs.hs  Periodic.hs  Show.hs
Test/LeanCheck/: Core.hs  Function.hs  IO.hs
Test/LeanCheck/Function/: ListsOfPairs.hs  Periodic.hs  Show.hs
bench/: dets.hs  list-fractionals.hs  memory-usage.hs  old-new-fractionals  pick.hs  tiers.hs  time-and-memory
bench/tiers-txt/: 4cases-Bool-Bool-Bool-Bool.txt  4cases-Bool-Bool-Bool.txt  4cases-Bool-Bool.txt  4cases-Bool-Int-Bool.txt  4cases-Bools-Bools.txt  4cases-Int-Bool-Bool.txt  4cases-Int-Int-Int.txt  4cases-Int-Int.txt  4cases-Nat-Nat-Nat.txt  4cases-Us-Us.txt  BagU.txt  Double.txt  Float.txt  Int,Int.txt  Int2.txt  Int3.txt  Nat.txt  Nat3.txt  NoDupBool.txt  Rational.txt  SetBool.txt  SetNat3.txt  SetU.txt  String.txt  Word2.txt  Word4.txt  XInt4.txt  XWord4.txt  default-Bool-Bool-Bool-Bool.txt  default-Bool-Int-Bool.txt  default-Int-Bool-Bool.txt  default-Int-Int-Int-Int.txt  default-Nat2-Nat2.txt  default-U-Nat.txt
doc/: data-invariant.md  faq.md  memory-usage.md  tutorial.md
eg/: higher-order.hs  overflow.hs  test-bool.hs  test-bool.txt  test-float.hs  test-float.txt  test-list.hs  test-sort.hs
etc/hugs-backports/Data/: Function.hs
mk/: All.hs  Toplibs.hs  depend.mk  ghcdeps  haskell.mk
src/Test/: LeanCheck.hs
src/Test/LeanCheck/: Basic.hs  Core.hs  Derive.hs  Error.hs  Function.hs  Generic.hs  IO.hs  Invariants.hs  Most.hs  Operators.hs  Ratio.hs  ShowFunction.hs  Stats.hs  Tiers.hs  TypeBinding.hs  Types.hs  Utils.hs
src/Test/LeanCheck/Function/: CoListable.hs  Eq.hs  FunListable.hs  List.hs  Listable.hs  ListsOfPairs.hs  Ord.hs  Periodic.hs  Show.hs  ShowFunction.hs
src/Test/LeanCheck/Function/Listable/: CoListable.hs  FunListable.hs  ListsOfPairs.hs  Mixed.hs  Periodic.hs
src/Test/LeanCheck/Function/Show/: EightLines.hs  FourCases.hs
src/Test/LeanCheck/Utils/: Operators.hs  TypeBinding.hs  Types.hs
test/: Test.hs  derive.hs  error.hs  fun.hs  funshow.hs  generic.hs  io.hs  main.hs  operators.hs  sdist  stats.hs  tiers.hs  types.hs
test/diff/: tiers-4cases-Bool-Int-Bool.out  tiers-4cases-Bools-Bools.out  tiers-4cases-Int-Bool-Bool.out  tiers-4cases-Int-Int-Int-Int.out  tiers-4cases-Nat-Nat-Nat.out  tiers-4cases-Nat2-Nat3.out  tiers-4cases-Nat3-Nat2.out  tiers-4cases-Nat3-Nat3.out  tiers-BagNat2.out  tiers-BagNat3.out  tiers-ComplexDouble.out  tiers-Double.out  tiers-Float.out  tiers-Int4.out  tiers-Int8.out  tiers-Ints.out  tiers-MapBoolBool.out  tiers-Nat2.out  tiers-Nat4.out  tiers-Nats.out  tiers-Rational.out  tiers-U,Us.out  tiers-Us,Us.out  tiers-Us.out  tiers-Word3.out  tiers-Word8.out  tiers-default-Bool-Bool-Bool.out  tiers-default-Bool-Int-Bool.out  tiers-default-Bools-Bools.out  tiers-default-Int-Int-Int-Int.out  tiers-default-Int-Int-Int.out  tiers-default-Int-Int.out  tiers-default-Ints-Ints.out  tiers-default-Nat,Nat-Nat.out  tiers-default-Nat-Nat-Nat.out  tiers-default-Us-Us.out
test/diff/eg/: higher-order.out  test-float.out
tests/: Test.hs  test-derive.hs  test-error.hs  test-fun.hs  test-function.hs  test-funshow.hs  test-io.hs  test-most.hs  test-operators.hs  test-sdist  test-stats.hs  test-tiers.hs  test-types.hs  test-utils.hs  test.hs
tests/diff/: tiers  tiers-4cases-Bool-Bool-Bool-Bool.out  tiers-4cases-Bool-Int-Bool.out  tiers-4cases-Bool-MBool.out  tiers-4cases-Bools-Bools.out  tiers-4cases-Int-Bool-Bool.out  tiers-4cases-Int-Int-Int-Int.out  tiers-4cases-Int-Int-Int.out  tiers-4cases-Int-Int.out  tiers-4cases-Ints-Ints.out  tiers-4cases-MBool-Bool.out  tiers-4cases-MBool-MBool.out  tiers-4cases-Nat,Nat-Nat.out  tiers-4cases-Nat-Nat-Nat.out  tiers-4cases-Nat-Nat.out  tiers-4cases-Nat2-Nat2.out  tiers-4cases-Nats-Nats.out  tiers-4cases-U-Bool.out  tiers-4cases-U-U.out  tiers-4cases-Us-Us.out  tiers-BagBool  tiers-BagBool.out  tiers-BagNat  tiers-BagNat.out  tiers-BagNat2  tiers-BagNat2.out  tiers-BagNat3  tiers-BagNat3.out  tiers-BagU  tiers-BagU.out  tiers-Bool  tiers-Bool-Bool  tiers-Bool-U  tiers-Bool.out  tiers-Bools  tiers-Bools.out  tiers-Char  tiers-Char.out  tiers-Int  tiers-Int,Int  (+246 more)
tests/diff/eg/: higher-order.out  overflow  test-bool  test-bool.out  test-list.out
tests/model/eg/: higher-order  test-bool  test-list  test-sort
