-- LeanCheck
--
-- Template Haskell dependency is optional.  To deactivate it:
-- 1. In this file, comment out:
--   Test.LeanCheck.Derive
--   template-haskell
--   and the test-suite derive
-- 2. On Test.LeanCheck, comment out Test.LeanCheck.Derive and deriveListable
--
-- I could ultimately add a flag to deactivate that, but I do not want to make
-- this cabal file too complicated.  -- Rudy

name:                leancheck
version:             0.5.0
synopsis:            Cholesterol-free property-based testing
description:
  LeanCheck is a simple enumerative property-based testing library.
  .
  Properties are defined as Haskell functions returning a boolean value which
  should be true for all possible choices of argument values.    LeanCheck
  applies enumerated argument values to these properties in search for a
  counterexample.  Properties can be viewed as parameterized unit tests.
  .
  LeanCheck works by producing tiers of test values: a possibly infinite list
  of finite sublists of same-and-increasingly-sized values.
  .
  LeanCheck has lean core with only 180 lines of Haskell code.

homepage:            https://github.com/rudymatela/leancheck#readme
license:             BSD3
license-file:        LICENSE
author:              Rudy Matela <rudy@matela.com.br>
maintainer:          Rudy Matela <rudy@matela.com.br>
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

extra-doc-files: README.md
               , CREDITS.md
               , TODO.md
               , doc/data-invariant.md
               , doc/tutorial.md
tested-with: GHC==8.0, GHC==7.10, GHC==7.8, GHC==7.6, GHC==7.4


source-repository head
  type:            git
  location:        https://github.com/rudymatela/leancheck

source-repository this
  type:            git
  location:        https://github.com/rudymatela/leancheck
  tag:             v0.5.0

library
  exposed-modules: Test.LeanCheck
                 , Test.LeanCheck.Basic
                 , Test.LeanCheck.Core
                 , Test.LeanCheck.Derive
                 , Test.LeanCheck.Error
                 , Test.LeanCheck.IO
                 , Test.LeanCheck.Tiers
                 , Test.LeanCheck.Utils
                 , Test.LeanCheck.Utils.Types
                 , Test.LeanCheck.Utils.TypeBinding
                 , Test.LeanCheck.Utils.Operators
                 , Test.LeanCheck.Function
                 , Test.LeanCheck.Function.ListsOfPairs
                 , Test.LeanCheck.Function.CoListable
                 , Test.LeanCheck.Function.Periodic
                 , Test.LeanCheck.Function.Show
                 , Test.LeanCheck.Function.ShowFunction
  other-modules:       Test.LeanCheck.Invariants
  hs-source-dirs:      src
  build-depends:       base >= 4 && < 5, template-haskell
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  hs-source-dirs:      src, tests
  build-depends:       base >= 4 && < 5, template-haskell
  default-language:    Haskell2010

test-suite types
  type:                exitcode-stdio-1.0
  main-is:             test-types.hs
  hs-source-dirs:      src, tests
  build-depends:       base >= 4 && < 5, template-haskell
  default-language:    Haskell2010

test-suite tiers
  type:                exitcode-stdio-1.0
  main-is:             test-tiers.hs
  hs-source-dirs:      src, tests
  build-depends:       base >= 4 && < 5, template-haskell
  default-language:    Haskell2010

test-suite operators
  type:                exitcode-stdio-1.0
  main-is:             test-operators.hs
  hs-source-dirs:      src, tests
  build-depends:       base >= 4 && < 5, template-haskell
  default-language:    Haskell2010

test-suite derive
  type:                exitcode-stdio-1.0
  main-is:             test-derive.hs
  hs-source-dirs:      src, tests
  build-depends:       base >= 4 && < 5, template-haskell
  default-language:    Haskell2010

test-suite error
  type:                exitcode-stdio-1.0
  main-is:             test-error.hs
  hs-source-dirs:      src, tests
  build-depends:       base >= 4 && < 5, template-haskell
  default-language:    Haskell2010
