-- Cabal file for LeanCheck
--
-- Template Haskell dependency is optional.  To deactivate it:
-- 1. In this file, comment out:
--   Test.LeanCheck.Derive
--   template-haskell
--   and the test-suite derive
-- 2. On Test.LeanCheck, comment out Test.LeanCheck.Derive and deriveListable
--
-- I could ultimately add a flag to deactivate that, but I do not want to make
-- this cabal file too complicated.  -- Rudy

name:                leancheck
version:             0.7.3
synopsis:            Enumerative property-based testing
description:
  LeanCheck is a simple enumerative property-based testing library.
  .
  Properties are defined as Haskell functions returning a boolean value which
  should be true for all possible choices of argument values.    LeanCheck
  applies enumerated argument values to these properties in search for a
  counterexample.  Properties can be viewed as parameterized unit tests.
  .
  LeanCheck works by producing tiers of test values: a possibly infinite list
  of finite sublists of same-and-increasingly-sized values.
  .
  LeanCheck has lean core with only 180 lines of Haskell code.

homepage:            https://github.com/rudymatela/leancheck#readme
license:             BSD3
license-file:        LICENSE
author:              Rudy Matela <rudy@matela.com.br>
maintainer:          Rudy Matela <rudy@matela.com.br>
category:            Testing
build-type:          Simple
cabal-version:       1.18

extra-doc-files: README.md
               , CREDITS.md
               , TODO.md
               , doc/data-invariant.md
               , doc/tutorial.md
extra-source-files: .gitignore
                  , .travis.yml
                  , Makefile
                  , bench/tiers.hs
                  , eg/higher-order.hs
                  , eg/overflow.hs
                  , eg/test-bool.hs
                  , eg/test-list.hs
                  , eg/test-sort.hs
                  , etc/hugs-backports/Data/Function.hs
                  , mk/All.hs
                  , mk/Toplibs.hs
                  , mk/depend.mk
                  , mk/ghcdeps
                  , mk/haddock-i
                  , mk/haskell.mk
                  , stack.yaml
                  , tests/diff/*.out
                  , tests/diff/eg/*.out
                  , tests/test-sdist
tested-with: GHC==8.4, GHC==8.2, GHC==8.0, GHC==7.10, GHC==7.8, GHC==7.6, GHC==7.4


source-repository head
  type:            git
  location:        https://github.com/rudymatela/leancheck

source-repository this
  type:            git
  location:        https://github.com/rudymatela/leancheck
  tag:             v0.7.3

library
  exposed-modules: Test.LeanCheck
                 , Test.LeanCheck.Basic
                 , Test.LeanCheck.Core
                 , Test.LeanCheck.Derive
                 , Test.LeanCheck.Error
                 , Test.LeanCheck.IO
                 , Test.LeanCheck.Tiers
                 , Test.LeanCheck.Utils
                 , Test.LeanCheck.Utils.Types
                 , Test.LeanCheck.Utils.TypeBinding
                 , Test.LeanCheck.Utils.Operators
                 , Test.LeanCheck.Stats
                 , Test.LeanCheck.Function
                 , Test.LeanCheck.Function.Eq
                 , Test.LeanCheck.Function.Show
                 , Test.LeanCheck.Function.Listable
                 , Test.LeanCheck.Function.Listable.ListsOfPairs
                 , Test.LeanCheck.Function.Listable.FunListable
                 , Test.LeanCheck.Function.Listable.CoListable
                 , Test.LeanCheck.Function.Listable.Periodic
                 , Test.LeanCheck.Function.Listable.Mixed
                 , Test.LeanCheck.Function.ListsOfPairs
                 , Test.LeanCheck.Function.CoListable
                 , Test.LeanCheck.Function.ShowFunction
  hs-source-dirs:      src
  build-depends:       base >= 4 && < 5, template-haskell
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  other-modules:       Test
  hs-source-dirs:      tests
  build-depends:       base >= 4 && < 5, leancheck
  default-language:    Haskell2010

test-suite types
  type:                exitcode-stdio-1.0
  main-is:             test-types.hs
  other-modules:       Test
  hs-source-dirs:      tests
  build-depends:       base >= 4 && < 5, leancheck
  default-language:    Haskell2010

test-suite tiers
  type:                exitcode-stdio-1.0
  main-is:             test-tiers.hs
  other-modules:       Test
  hs-source-dirs:      tests
  build-depends:       base >= 4 && < 5, leancheck
  default-language:    Haskell2010

test-suite operators
  type:                exitcode-stdio-1.0
  main-is:             test-operators.hs
  other-modules:       Test
  hs-source-dirs:      tests
  build-depends:       base >= 4 && < 5, leancheck
  default-language:    Haskell2010

test-suite derive
  type:                exitcode-stdio-1.0
  main-is:             test-derive.hs
  other-modules:       Test
  hs-source-dirs:      tests
  build-depends:       base >= 4 && < 5, leancheck
  default-language:    Haskell2010

test-suite error
  type:                exitcode-stdio-1.0
  main-is:             test-error.hs
  other-modules:       Test
  hs-source-dirs:      tests
  build-depends:       base >= 4 && < 5, leancheck
  default-language:    Haskell2010

test-suite io
  type:                exitcode-stdio-1.0
  main-is:             test-io.hs
  other-modules:       Test
  hs-source-dirs:      tests
  build-depends:       base >= 4 && < 5, leancheck
  default-language:    Haskell2010

test-suite fun
  type:                exitcode-stdio-1.0
  main-is:             test-fun.hs
  other-modules:       Test
  hs-source-dirs:      tests
  build-depends:       base >= 4 && < 5, leancheck
  default-language:    Haskell2010

test-suite funshow
  type:                exitcode-stdio-1.0
  main-is:             test-funshow.hs
  other-modules:       Test
  hs-source-dirs:      tests
  build-depends:       base >= 4 && < 5, leancheck
  default-language:    Haskell2010

test-suite stats
  type:                exitcode-stdio-1.0
  main-is:             test-stats.hs
  other-modules:       Test
  hs-source-dirs:      tests
  build-depends:       base >= 4 && < 5, leancheck
  default-language:    Haskell2010
